--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -19,8 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_place_holder"
-            android:contentDescription="@string/img_story" />
+            android:contentDescription="@string/img_story"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_place_holder" />
 
         <TextView
             android:id="@+id/username"
